# FunQuizz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/question/: question.cpp  question.hpp
src/repository/: repository.cpp  repository.hpp
src/ui/: about.cpp  about.h  about.ui  addquestion.cpp  addquestion.h  addquestion.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  managequestions.cpp  managequestions.h  managequestions.ui  newrepository.cpp  newrepository.h  newrepository.ui
